add input type="email"

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
       <form action="">
-        <input type="text" name="email" class="input">
+        <input type="email" name="email" class="input">
         <input type="text" name="name" class="input">
         <input type="text" name="address" class="input">
         <input type="tel" name="phone" class="input">
